--- a/client/src/css/quasar.variables.scss
+++ b/client/src/css/quasar.variables.scss
@@ -1,7 +1,8 @@
 // src/css/quasar.variables.scss
 
-$primary   : #1597a3;
-$secondary : #26A69A;
+//$primary   : #1597a3;
+$primary   : #202020;
+$secondary : #34495e;//#26A69A;
 $accent    : #9C27B0;
 
 $dark      : #1d1d1d;
