--- a/client/src/css/quasar.variables.scss
+++ b/client/src/css/quasar.variables.scss
@@ -1,7 +1,6 @@
 // src/css/quasar.variables.scss
 
-//$primary   : #1597a3;
-$primary   : #202020;
+$primary   : #3d3d3d;//#202020; //#1597a3;
 $secondary : #34495e;//#26A69A;
 $accent    : #9C27B0;
 
